--- a/client/src/main/resources/client/scenes/ClientConnect.fxml
+++ b/client/src/main/resources/client/scenes/ClientConnect.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="390.0" prefWidth="509.0" style="-fx-background-color: #cce7f0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ClientConnectCtrl">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="46.0" layoutY="49.0" prefHeight="255.0" prefWidth="402.0">
@@ -32,8 +31,8 @@
                         <Font size="21.0" />
                      </font>
                   </Label>
-                  <TextField />
-                  <Button mnemonicParsing="false" text="Connect" />
+                  <TextField fx:id="ip" />
+                  <Button mnemonicParsing="false" onAction="#goToStartPage" text="Connect" />
                </children>
                <padding>
                   <Insets bottom="20.0" />
