--- a/client/src/main/resources/client/scenes/ListMenu.fxml
+++ b/client/src/main/resources/client/scenes/ListMenu.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="277.0" prefWidth="215.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ListMenuCtrl">
    <children>
       <VBox prefHeight="273.0" prefWidth="215.0">
@@ -36,12 +35,12 @@
             </Label>
             <HBox prefHeight="31.0" prefWidth="208.0">
                <children>
-                  <TextField prefHeight="25.0" prefWidth="143.0" promptText="Type title here...">
+                  <TextField fx:id="listMenuTextField" prefHeight="25.0" prefWidth="143.0" promptText="Type title here...">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Change">
+                  <Button fx:id="listMenuButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Change">
                      <HBox.margin>
                         <Insets bottom="5.0" right="5.0" />
                      </HBox.margin>
