First part of backend implementation of card name change

--- a/client/src/main/resources/client/scenes/AddTask.fxml
+++ b/client/src/main/resources/client/scenes/AddTask.fxml
@@ -9,7 +9,7 @@
    <children>
       <Label layoutX="37.0" layoutY="42.0" prefHeight="34.0" prefWidth="55.0" text="Card Title:" />
       <TextField fx:id="title" layoutX="101.0" layoutY="46.0" />
-      <Button layoutX="231.0" layoutY="104.0" mnemonicParsing="false" onAction="#create" text="Edit" />
+      <Button fx:id="editButton" layoutX="231.0" layoutY="104.0" mnemonicParsing="false" text="Edit" />
       <Button layoutX="169.0" layoutY="104.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
    </children>
 </AnchorPane>
