Remove initial focus from TODO list and when + is pressed

--- a/client/src/main/resources/client/scenes/HomeScreen.fxml
+++ b/client/src/main/resources/client/scenes/HomeScreen.fxml
@@ -21,5 +21,6 @@
       </ScrollPane>
       <Button layoutX="488.0" layoutY="14.0" mnemonicParsing="false" onAction="#createList" text="Add new list" AnchorPane.rightAnchor="30.400000000000006" />
       <Button layoutX="14.0" layoutY="366.0" mnemonicParsing="false" onAction="#disconnect" text="Disconnect" />
+      <Label fx:id="hiddenLabel" layoutX="52.0" layoutY="18.0" opacity="0.0" text="Label" />
    </children>
 </AnchorPane>
