Add a button for easy default connection

--- a/client/src/main/resources/client/scenes/ClientConnect.fxml
+++ b/client/src/main/resources/client/scenes/ClientConnect.fxml
@@ -38,6 +38,7 @@
                   <Insets bottom="20.0" />
                </padding>
             </HBox>
+            <Button mnemonicParsing="false" onAction="#connectToDefaultServer" text="Connect to localhost:8080" />
          </children>
       </VBox>
    </children>
