--- a/client/src/main/resources/client/scenes/ClientConnect.fxml
+++ b/client/src/main/resources/client/scenes/ClientConnect.fxml
@@ -5,40 +5,46 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="390.0" prefWidth="509.0" style="-fx-background-color: #cce7f0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ClientConnectCtrl">
+<AnchorPane prefHeight="550.0" prefWidth="800.0" style="-fx-background-color: #DAD2BF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ClientConnectCtrl">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="46.0" layoutY="49.0" prefHeight="255.0" prefWidth="402.0">
+      <VBox alignment="TOP_CENTER" layoutX="46.0" layoutY="49.0" prefHeight="477.0" prefWidth="717.0" AnchorPane.rightAnchor="20" AnchorPane.leftAnchor="20" >
          <children>
             <Label text="Client Connect">
                <font>
-                  <Font name="Perpetua Bold" size="61.0" />
+                  <Font name="Perpetua Bold" size="67.0" />
                </font>
+               <padding>
+                  <Insets top="15.0" />
+               </padding>
             </Label>
             <Region>
                <padding>
                   <Insets bottom="20.0" />
                </padding>
             </Region>
-            <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
                   <Label text="Server Address:">
                      <font>
-                        <Font size="21.0" />
+                        <Font size="30.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="ipAddress" promptText="localhost:8080" />
-                  <Button mnemonicParsing="false" onAction="#connect" text="Connect" />
+                  <TextField fx:id="ipAddress" prefHeight="36.0" prefWidth="176.0" promptText="localhost:8080" />
+                  <Button mnemonicParsing="false" onAction="#connect" prefHeight="34.0" prefWidth="76.0" text="Connect" />
                </children>
                <padding>
                   <Insets bottom="20.0" />
                </padding>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#connectToDefaultServer" text="Connect to localhost:8080" />
+            <Button mnemonicParsing="false" onAction="#connectToDefaultServer" prefHeight="41.0" prefWidth="183.0" text="Connect to localhost:8080" />
+            <AnchorPane prefHeight="91.0" prefWidth="402.0" />
+            <BorderPane prefHeight="0.0" prefWidth="334.0" />
          </children>
       </VBox>
    </children>
