--- a/client/src/main/resources/client/scenes/StartPage.fxml
+++ b/client/src/main/resources/client/scenes/StartPage.fxml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.StartPageCtrl">
+<AnchorPane prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.StartPageCtrl">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="34.0" layoutY="60.0" prefHeight="319.0" prefWidth="530.0" spacing="60.0">
+      <VBox alignment="TOP_CENTER" layoutX="34.0" layoutY="60.0" prefHeight="458.0" prefWidth="728.0" spacing="60.0" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
          <children>
             <Label alignment="CENTER" prefHeight="18.0" prefWidth="531.0" text="Talio">
                <font>
-                  <Font name="Perpetua Bold" size="61.0" />
+                  <Font name="Perpetua Bold" size="72.0" />
                </font>
+               <padding>
+                  <Insets top="25.0" />
+               </padding>
             </Label>
-            <Button mnemonicParsing="false" onAction="#goToBoardOverview" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="START" textAlignment="CENTER">
+            <Button mnemonicParsing="false" onAction="#goToBoardOverview" prefHeight="83.0" prefWidth="149.0" style="-fx-border-color: black; -fx-background-color: #DAD2BF;" text="START" textAlignment="CENTER">
                <font>
-                  <Font size="23.0" />
+                  <Font size="32.0" />
                </font>
             </Button>
          </children>
