--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -8,22 +8,21 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
+<AnchorPane id="anchorPane" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
    <children>
-      <Label layoutX="208.0" layoutY="14.0" text="BOARD NAME">
+      <Label layoutX="308.0" layoutY="14.0" text="BOARD NAME" AnchorPane.topAnchor="15">
          <font>
             <Font size="29.0" />
          </font>
       </Label>
-      <ScrollPane layoutX="36.0" layoutY="70.0" pannable="true" prefHeight="294.0" prefWidth="518.0" vbarPolicy="NEVER">
+      <ScrollPane layoutX="30.0" layoutY="95.0" pannable="true" prefHeight="387.0" prefWidth="723.0" vbarPolicy="NEVER" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="47.39999999999998">
          <content>
-            <HBox id="panel" fx:id="panel" spacing="10.0" />
+            <HBox id="panel" fx:id="panel" alignment="CENTER" spacing="10.0" />
          </content>
       </ScrollPane>
-      <Button layoutX="488.0" layoutY="14.0" mnemonicParsing="false" onAction="#createList" text="Add new list" AnchorPane.rightAnchor="30.400000000000006" />
-      <Button layoutX="14.0" layoutY="366.0" mnemonicParsing="false" onAction="#disconnect" text="Disconnect" />
+      <Button layoutX="14.0" layoutY="366.0" mnemonicParsing="false" onAction="#disconnect" text="Disconnect" AnchorPane.bottomAnchor="30.4" />
       <Label fx:id="hiddenLabel" layoutX="52.0" layoutY="18.0" opacity="0.0" text="Label" />
-      <Label fx:id="addConfirmationLabel" layoutX="489.0" layoutY="48.0" text="List was added" textFill="#ff3232" visible="false">
+      <Label fx:id="addConfirmationLabel"  text="List was added" textFill="#ff3232" visible="false" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
