--- a/client/src/main/resources/client/scenes/StartPage.fxml
+++ b/client/src/main/resources/client/scenes/StartPage.fxml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.StartPageCtrl">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="34.0" layoutY="60.0" prefHeight="458.0" prefWidth="728.0" spacing="60.0" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
-         <children>
-            <Label alignment="CENTER" prefHeight="18.0" prefWidth="531.0" text="Talio">
-               <font>
-                  <Font name="Perpetua Bold" size="72.0" />
-               </font>
-               <padding>
-                  <Insets top="25.0" />
-               </padding>
-            </Label>
-            <Button mnemonicParsing="false" onAction="#goToBoardOverview" prefHeight="83.0" prefWidth="149.0" style="-fx-border-color: black; -fx-background-color: #DAD2BF;" text="START" textAlignment="CENTER">
-               <font>
-                  <Font size="32.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
+      <Label alignment="CENTER" layoutX="154.0" layoutY="25.0" prefHeight="76.0" prefWidth="179.0" text="Talio">
+         <font>
+            <Font name="Perpetua Bold" size="61.0" />
+         </font>
+      </Label>
+      <Button layoutX="84.0" layoutY="215.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="98.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Join" textAlignment="CENTER">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Button>
+      <Button layoutX="84.0" layoutY="141.0" mnemonicParsing="false" onAction="#createNewBoard" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Create" textAlignment="CENTER">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Button>
+      <Label layoutX="295.0" layoutY="107.0" text="Board List:">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <Button layoutX="161.0" layoutY="355.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="211.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Log in as Admin" textAlignment="CENTER">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Button>
+      <ScrollPane fx:id="scrollPane" layoutX="248.0" layoutY="141.0" prefHeight="200.0" prefWidth="200.0">
+         <content>
+            <VBox fx:id="boardList" prefHeight="169.0" prefWidth="208.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
