--- a/client/src/main/resources/client/scenes/StartPage.fxml
+++ b/client/src/main/resources/client/scenes/StartPage.fxml
@@ -14,7 +14,7 @@
             <Font name="Perpetua Bold" size="61.0" />
          </font>
       </Label>
-      <Button layoutX="84.0" layoutY="215.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="98.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Join" textAlignment="CENTER">
+      <Button layoutX="84.0" layoutY="215.0" mnemonicParsing="false" onAction="#joinNewBoard" prefHeight="52.0" prefWidth="98.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Join" textAlignment="CENTER">
          <font>
             <Font size="23.0" />
          </font>
