--- a/client/src/main/resources/client/scenes/CardDetails.fxml
+++ b/client/src/main/resources/client/scenes/CardDetails.fxml
@@ -18,7 +18,7 @@
                 <AnchorPane prefHeight="40.0" prefWidth="600.0">
                     <children>
                         <Label fx:id="title" layoutX="24.0" layoutY="7.0" prefHeight="26.0" prefWidth="126.0" text="TITLE" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="7.0" />
-                        <Button layoutX="562.0" layoutY="7.0" mnemonicParsing="false" text="X" AnchorPane.rightAnchor="14.8" AnchorPane.topAnchor="7.0" />
+                        <Button layoutX="562.0" layoutY="7.0" mnemonicParsing="false" onAction="#closeCardDetails" text="X" AnchorPane.rightAnchor="14.8" AnchorPane.topAnchor="7.0" />
                     </children>
                 </AnchorPane>
                 <Separator prefWidth="200.0" />
@@ -45,7 +45,7 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="293.0" prefWidth="600.0">
                     <children>
                         <Button layoutX="210.0" layoutY="1.0" mnemonicParsing="false" onAction="#addSubTask" text="Add SubTask" />
-                        <ScrollPane layoutY="29.0" prefHeight="114.0" prefWidth="275.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="323.0" AnchorPane.topAnchor="29.0" hbarPolicy="NEVER">
+                        <ScrollPane hbarPolicy="NEVER" layoutY="29.0" prefHeight="114.0" prefWidth="275.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="323.0" AnchorPane.topAnchor="29.0">
                             <content>
                                 <VBox id="subtasks" fx:id="subtasks" minHeight="250.0" minWidth="272.0" spacing="2.0">
                                     <padding>
