--- a/client/src/main/resources/client/scenes/CardDetails.fxml
+++ b/client/src/main/resources/client/scenes/CardDetails.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
@@ -66,11 +67,7 @@
             <HBox prefHeight="17.0" prefWidth="600.0">
                <children>
                   <ProgressBar fx:id="progressBar" prefHeight="17.0" prefWidth="286.0" progress="0.0" />
-                  <Label fx:id="percent" text="0.0%">
-                     <padding>
-                        <Insets left="5.0" />
-                     </padding>
-                  </Label>
+                  <ProgressIndicator fx:id="progressIndicator" progress="0.0" />
                </children>
             </HBox>
             </children>
