--- a/client/src/main/resources/client/scenes/CardDetails.fxml
+++ b/client/src/main/resources/client/scenes/CardDetails.fxml
@@ -59,6 +59,7 @@
                                 <Font size="20.0" />
                             </font>
                         </Label>
+                  <Button layoutX="143.0" layoutY="2.0" mnemonicParsing="false" onAction="#saveSubTaskOrder" text="save" />
                     </children>
                 </AnchorPane>
             </children>
