--- a/client/src/main/resources/client/scenes/TagsInCard.fxml
+++ b/client/src/main/resources/client/scenes/TagsInCard.fxml
@@ -1,25 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="389.0" prefWidth="539.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.TagsInCardCtrl">
+<AnchorPane minHeight="500.0" minWidth="550.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.TagsInCardCtrl">
    <children>
-      <ScrollPane layoutX="14.0" layoutY="41.0" prefHeight="297.0" prefWidth="247.0">
-         <content>
-            <VBox fx:id="tagsInCard" prefHeight="275.0" prefWidth="220.0" />
-         </content>
-      </ScrollPane>
-      <ScrollPane layoutX="282.0" layoutY="41.0" prefHeight="297.0" prefWidth="247.0">
-         <content>
-            <VBox fx:id="tagsInBoard" prefHeight="275.0" prefWidth="220.0" />
-         </content>
-      </ScrollPane>
-      <Label layoutX="14.0" layoutY="14.0" text="Tags in card" />
-      <Label fx:id="TagsInBoard" layoutX="282.0" layoutY="14.0" text="Tags in the board" />
-      <Button layoutX="245.0" layoutY="349.0" mnemonicParsing="false" onAction="#closeTagsInCard" text="Ready" />
+      <VBox alignment="CENTER" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
+         <children>
+            <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
+               <children>
+                  <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label fx:id="TagsInBoard" text="Tags of this board">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </Label>
+                        <ScrollPane fitToWidth="true" maxWidth="1.7976931348623157E308" prefHeight="297.0" prefWidth="247.0" VBox.vgrow="ALWAYS">
+                           <content>
+                              <VBox fx:id="tagsInBoard" alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" prefHeight="328.0" prefWidth="229.0" />
+                           </content>
+                        </ScrollPane>
+                     </children>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label text="Tags of this card">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </Label>
+                        <ScrollPane fitToWidth="true" maxWidth="1.7976931348623157E308" prefHeight="297.0" prefWidth="247.0" VBox.vgrow="ALWAYS">
+                           <content>
+                              <VBox fx:id="tagsInCard" alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" prefHeight="330.0" prefWidth="229.0" />
+                           </content>
+                        </ScrollPane>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#closeTagsInCard" prefHeight="42.0" prefWidth="98.0" text="Ready">
+               <VBox.margin>
+                  <Insets left="15.0" right="15.0" top="15.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
