--- a/client/src/main/resources/client/scenes/StartPage.fxml
+++ b/client/src/main/resources/client/scenes/StartPage.fxml
@@ -16,7 +16,7 @@
       <GridPane alignment="CENTER" layoutX="20.0" layoutY="26.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
@@ -45,9 +45,9 @@
                         <Font size="23.0" />
                      </font>
                   </Label>
-                  <ScrollPane fx:id="scrollPane" prefHeight="270.0" prefWidth="254.0" vbarPolicy="ALWAYS">
+                  <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="270.0" prefWidth="254.0" vbarPolicy="ALWAYS">
                      <content>
-                        <VBox fx:id="boardList" alignment="TOP_CENTER" prefHeight="196.0" prefWidth="228.0" />
+                        <VBox fx:id="boardList" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="266.0" prefWidth="277.0" />
                      </content>
                   </ScrollPane>
                </children>
