--- a/client/src/main/resources/client/scenes/StartPage.fxml
+++ b/client/src/main/resources/client/scenes/StartPage.fxml
@@ -30,7 +30,7 @@
                   <Font name="Perpetua Bold" size="61.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" onAction="#loginAsAdmin" prefHeight="52.0" prefWidth="211.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Log in as Admin" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+            <Button fx:id="loginAdmin" mnemonicParsing="false" onAction="#loginAsAdmin" prefHeight="52.0" prefWidth="211.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Log in as Admin" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
                <font>
                   <Font size="23.0" />
                </font>
